styles.css
:root {
    --header-height: 5rem;
    --padding-button: 10px 15px;
    --border-radius-button: 5px;
    --font-size-button: 1.125em;
    
    /* Colors */
    --body-color: #f8f8f8;
    /* --body-color: rgb(243 244 246); */ /* Proposition */
    --main-color: #c0eb75;
    --main-color-hovered: #cefa82;
    --secondary-color: #d6d6d6;
    --secondary-color-hovered: #bfc0c0;
    --text-color: #1d1d1f;
    --white-text-color: #fff;
    --progressbar-previous: #efffd2;
    --progressbar-next: #e1ffad;
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

html {
    scroll-behavior: smooth !important;
    --scroll-behavior: smooth !important;      /*SCROLL BEHAVIOUR SMOOTH EQUIVALENT FOR SAFARI */
}

body {
    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
    /* background-color: var(--body-color); */
    background-color: var(--white-text-color);
    color: var(--text-color);
    height: 100%;
    width: 100%;
    position: relative;
    font-size: 15px;
}

main {
    padding: var(--header-height) 0 0 0;
    height: 100%;
}

section {
    width: 100vw;
    height: calc(100vh - var(--header-height));
}

h1,h2,h3,h4 {
    color: var(--title-color);
    font-weight: var(--font-semi-bold);
}

ul {
    list-style: none;
}

a {
    text-decoration: none;
}

img {
    max-width: 100%;
    height: auto;
}


/* =============== HEADER =============== */
header {
    width: 100%;
    height: var(--header-height);
    position: fixed;
    z-index: 999;
    background-color: #fff;
    /* box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1); */
    border-bottom: thin solid #dcdcdc;
}
.nav {
    max-width: 900px;
    height: var(--header-height);
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0 auto;
}
.logo {
    height: 2.75rem;
    /* height: 3.5rem; */
    width: auto;
}
.nav-links {
    display: flex;
    column-gap: 2rem;
}   

.nav-item {
    font-size: var(--font-size-button);
    padding: 10px;
}
.nav-link {
    color: var(--text-color);
    font-weight: 500;
}
.nav-link::after {
    content: '';
    display: block;
    margin: auto;
    height: 2px;
    width: 0px;
    background-color: var(--text-color);
    transition: width .25s ease-out;
}
.nav-link:hover:after {
    width: 100%;
}

/* =============== WELCOME SECTION =============== */
.welcome-section {
    display: grid;
    place-items: center;
    height: calc(100vh - 2 * var(--header-height));
}
.welcome-section.started {
    display: none;
}
.welcome-container {
    display: flex;
    max-width: 520px;
    flex-direction: column;
    flex-wrap: wrap;
}
.welcome-container h1 {
    font-size: 42px;
    font-weight: 500;
    text-align: center;
    line-height: 1.35em;
    margin-bottom: 1rem;
    color: var(--text-color);
}
.welcome-container p {
    color: #858585;
    font-size: 18px;
    font-weight: 400;
    text-align: center;
}
.welcome-container span {
    width: 100%;
    height: auto;
    margin-top: 3rem;
    padding: .75rem 1rem;
    background-color: var(--text-color);
    color: var(--body-color);
    text-align: center;
    font-size: 18px;
    font-weight: 500;
    border-radius: 5px;
    cursor: pointer;
    transition: all 100ms ease;
}
.welcome-container span:hover {
    opacity: 0.85;
}

/* =============== CALCULATOR SECTION =============== */
.calculator-section {
    display: none;
    flex-wrap: wrap;
}
.calculator-section.started {
    display: flex;
}

/* =============== BUTTONS =============== */
.button {
    padding: var(--padding-button);
    color: var(--text-color);
    border-radius: var(--border-radius-button);
    font-size: var(--font-size-button);
    border: none;
    transition: all 200ms ease-out;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1em;
}
.cta_button {
    margin: 0 25px;
}
.btn_next,
.btn_done,
.btn_back {
    width: 130px;
}
.cta_button,
.btn_next,
.btn_done {
    background-color: var(--main-color);
}
.cta_button:hover,
.btn_next:hover,
.btn_done:hover {
    background-color: var(--main-color-hovered);
}
.btn_back {
    background-color: var(--secondary-color);
}
.btn_back:hover {
    background-color: var(--secondary-color-hovered);
}
.btn_next .icon,
.btn_done .icon {
    display: flex;
	margin-left: 10px;
}
.btn_back .icon {
    display: flex;
	margin-right: 10px;
}
.icon i {
    font-size: 1.25em;
}

/* =============== STEPS SECTION =============== */
.steps-section {
    background-color: var(--main-color);
    max-width: 400px;
    height: 100%;
    flex: 0 0 auto;
}
.steps-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    padding: 0 40px;
}
.steps-container ul {
    display: flex;
    flex-direction: column;
}
.steps-container .mobile-steps {
    display: none;
}
.steps-container .desktop-steps li {
    margin-bottom: 50px;
	position: relative;
    display: flex;
}
.steps-container .mobile-steps li {
    display: none;
    padding: 16px;
}
.steps-container .mobile-steps li.active {
	position: relative;
    display: flex;
}
.steps-container ul li:last-child {
    margin-bottom: 0;
}
.steps-container .desktop-steps li:before {
    content: "";
	position: absolute;
	top: 55px;
	/* transform: translateX(-50%);
	left: 50%; */
    left: 29px;
	width: 2px;
	height: 100%;
	background-color: var(--progressbar-next);
}
.steps-container ul li:last-child:before {
    display: none;
}
.steps-container .desktop-steps li.active:before {
    background-color: var(--progressbar-previous);
}
.steps-container ul li.active p {
    background-color: var(--progressbar-previous);
}
.steps-container ul li .progress-counter {
    padding: 5px;
	border-radius: 50%;
}
/* ... */

